sp/btree/parser/BTreeDSLParser.py
# Generated from sp/btree/parser/BTreeDSL.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class BTreeDSLParser ( Parser ):

    grammarFileName = "BTreeDSL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'behaviortree'", "':'", "'condition'", 
                     "'('", "')'", "'maneuver'", "'subtree'", "','", "<INVALID>", 
                     "<INVALID>", "'='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "OPERATOR", "BOP", "ATT", "FLOAT", "WORD", 
                      "WS", "NL", "INDENT", "DEDENT" ]

    RULE_behaviorTree = 0
    RULE_rootNode = 1
    RULE_node = 2
    RULE_nodeComposition = 3
    RULE_leafNode = 4
    RULE_condition = 5
    RULE_maneuver = 6
    RULE_subtree = 7
    RULE_midconf = 8
    RULE_mconfig = 9
    RULE_cconfig = 10
    RULE_mid = 11
    RULE_params = 12
    RULE_bexpr = 13
    RULE_value = 14
    RULE_func = 15
    RULE_tupl = 16
    RULE_name = 17

    ruleNames =  [ "behaviorTree", "rootNode", "node", "nodeComposition", 
                   "leafNode", "condition", "maneuver", "subtree", "midconf", 
                   "mconfig", "cconfig", "mid", "params", "bexpr", "value", 
                   "func", "tupl", "name" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    OPERATOR=9
    BOP=10
    ATT=11
    FLOAT=12
    WORD=13
    WS=14
    NL=15
    INDENT=16
    DEDENT=17

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class BehaviorTreeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BTreeDSLParser.EOF, 0)

        def name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BTreeDSLParser.NameContext)
            else:
                return self.getTypedRuleContext(BTreeDSLParser.NameContext,i)


        def INDENT(self, i:int=None):
            if i is None:
                return self.getTokens(BTreeDSLParser.INDENT)
            else:
                return self.getToken(BTreeDSLParser.INDENT, i)

        def rootNode(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BTreeDSLParser.RootNodeContext)
            else:
                return self.getTypedRuleContext(BTreeDSLParser.RootNodeContext,i)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(BTreeDSLParser.NL)
            else:
                return self.getToken(BTreeDSLParser.NL, i)

        def DEDENT(self, i:int=None):
            if i is None:
                return self.getTokens(BTreeDSLParser.DEDENT)
            else:
                return self.getToken(BTreeDSLParser.DEDENT, i)

        def getRuleIndex(self):
            return BTreeDSLParser.RULE_behaviorTree

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBehaviorTree" ):
                listener.enterBehaviorTree(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBehaviorTree" ):
                listener.exitBehaviorTree(self)




    def behaviorTree(self):

        localctx = BTreeDSLParser.BehaviorTreeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_behaviorTree)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 36
                self.match(BTreeDSLParser.T__0)
                self.state = 37
                self.name()
                self.state = 38
                self.match(BTreeDSLParser.T__1)
                self.state = 39
                self.match(BTreeDSLParser.INDENT)
                self.state = 40
                self.rootNode()
                self.state = 42
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==15:
                    self.state = 41
                    self.match(BTreeDSLParser.NL)


                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==17:
                    self.state = 44
                    self.match(BTreeDSLParser.DEDENT)


                self.state = 49 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==1):
                    break

            self.state = 51
            self.match(BTreeDSLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RootNodeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def node(self):
            return self.getTypedRuleContext(BTreeDSLParser.NodeContext,0)


        def getRuleIndex(self):
            return BTreeDSLParser.RULE_rootNode

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRootNode" ):
                listener.enterRootNode(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRootNode" ):
                listener.exitRootNode(self)




    def rootNode(self):

        localctx = BTreeDSLParser.RootNodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_rootNode)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.node()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NodeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def leafNode(self):
            return self.getTypedRuleContext(BTreeDSLParser.LeafNodeContext,0)


        def nodeComposition(self):
            return self.getTypedRuleContext(BTreeDSLParser.NodeCompositionContext,0)


        def getRuleIndex(self):
            return BTreeDSLParser.RULE_node

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNode" ):
                listener.enterNode(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNode" ):
                listener.exitNode(self)




    def node(self):

        localctx = BTreeDSLParser.NodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_node)
        try:
            self.state = 57
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 6, 7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 55
                self.leafNode()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 56
                self.nodeComposition()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NodeCompositionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPERATOR(self):
            return self.getToken(BTreeDSLParser.OPERATOR, 0)

        def INDENT(self):
            return self.getToken(BTreeDSLParser.INDENT, 0)

        def DEDENT(self):
            return self.getToken(BTreeDSLParser.DEDENT, 0)

        def name(self):
            return self.getTypedRuleContext(BTreeDSLParser.NameContext,0)


        def node(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BTreeDSLParser.NodeContext)
            else:
                return self.getTypedRuleContext(BTreeDSLParser.NodeContext,i)


        def getRuleIndex(self):
            return BTreeDSLParser.RULE_nodeComposition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNodeComposition" ):
                listener.enterNodeComposition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNodeComposition" ):
                listener.exitNodeComposition(self)




    def nodeComposition(self):

        localctx = BTreeDSLParser.NodeCompositionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_nodeComposition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(BTreeDSLParser.OPERATOR)
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13 or _la==14:
                self.state = 60
                self.name()


            self.state = 63
            self.match(BTreeDSLParser.INDENT)
            self.state = 65 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 64
                self.node()
                self.state = 67 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 712) != 0)):
                    break

            self.state = 69
            self.match(BTreeDSLParser.DEDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LeafNodeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NL(self):
            return self.getToken(BTreeDSLParser.NL, 0)

        def maneuver(self):
            return self.getTypedRuleContext(BTreeDSLParser.ManeuverContext,0)


        def condition(self):
            return self.getTypedRuleContext(BTreeDSLParser.ConditionContext,0)


        def subtree(self):
            return self.getTypedRuleContext(BTreeDSLParser.SubtreeContext,0)


        def getRuleIndex(self):
            return BTreeDSLParser.RULE_leafNode

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLeafNode" ):
                listener.enterLeafNode(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLeafNode" ):
                listener.exitLeafNode(self)




    def leafNode(self):

        localctx = BTreeDSLParser.LeafNodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_leafNode)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6]:
                self.state = 71
                self.maneuver()
                pass
            elif token in [3]:
                self.state = 72
                self.condition()
                pass
            elif token in [7]:
                self.state = 73
                self.subtree()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 76
            self.match(BTreeDSLParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(BTreeDSLParser.NameContext,0)


        def cconfig(self):
            return self.getTypedRuleContext(BTreeDSLParser.CconfigContext,0)


        def getRuleIndex(self):
            return BTreeDSLParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)




    def condition(self):

        localctx = BTreeDSLParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_condition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(BTreeDSLParser.T__2)
            self.state = 79
            self.name()
            self.state = 80
            self.match(BTreeDSLParser.T__3)
            self.state = 81
            self.cconfig()
            self.state = 82
            self.match(BTreeDSLParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ManeuverContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(BTreeDSLParser.NameContext,0)


        def mconfig(self):
            return self.getTypedRuleContext(BTreeDSLParser.MconfigContext,0)


        def getRuleIndex(self):
            return BTreeDSLParser.RULE_maneuver

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterManeuver" ):
                listener.enterManeuver(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitManeuver" ):
                listener.exitManeuver(self)




    def maneuver(self):

        localctx = BTreeDSLParser.ManeuverContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_maneuver)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(BTreeDSLParser.T__5)
            self.state = 85
            self.name()
            self.state = 86
            self.match(BTreeDSLParser.T__3)
            self.state = 87
            self.mconfig()
            self.state = 88
            self.match(BTreeDSLParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubtreeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(BTreeDSLParser.NameContext,0)


        def midconf(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BTreeDSLParser.MidconfContext)
            else:
                return self.getTypedRuleContext(BTreeDSLParser.MidconfContext,i)


        def getRuleIndex(self):
            return BTreeDSLParser.RULE_subtree

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubtree" ):
                listener.enterSubtree(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubtree" ):
                listener.exitSubtree(self)




    def subtree(self):

        localctx = BTreeDSLParser.SubtreeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_subtree)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(BTreeDSLParser.T__6)
            self.state = 91
            self.name()
            self.state = 92
            self.match(BTreeDSLParser.T__3)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13 or _la==14:
                self.state = 93
                self.midconf()
                self.state = 98
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==8:
                    self.state = 94
                    self.match(BTreeDSLParser.T__7)
                    self.state = 95
                    self.midconf()
                    self.state = 100
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 103
            self.match(BTreeDSLParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MidconfContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mid(self):
            return self.getTypedRuleContext(BTreeDSLParser.MidContext,0)


        def ATT(self):
            return self.getToken(BTreeDSLParser.ATT, 0)

        def mconfig(self):
            return self.getTypedRuleContext(BTreeDSLParser.MconfigContext,0)


        def getRuleIndex(self):
            return BTreeDSLParser.RULE_midconf

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMidconf" ):
                listener.enterMidconf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMidconf" ):
                listener.exitMidconf(self)




    def midconf(self):

        localctx = BTreeDSLParser.MidconfContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_midconf)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.mid()
            self.state = 106
            self.match(BTreeDSLParser.ATT)
            self.state = 107
            self.mconfig()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MconfigContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(BTreeDSLParser.NameContext,0)


        def params(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BTreeDSLParser.ParamsContext)
            else:
                return self.getTypedRuleContext(BTreeDSLParser.ParamsContext,i)


        def getRuleIndex(self):
            return BTreeDSLParser.RULE_mconfig

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMconfig" ):
                listener.enterMconfig(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMconfig" ):
                listener.exitMconfig(self)




    def mconfig(self):

        localctx = BTreeDSLParser.MconfigContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_mconfig)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.name()
            self.state = 110
            self.match(BTreeDSLParser.T__3)
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==13 or _la==14:
                self.state = 111
                self.params()
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 117
            self.match(BTreeDSLParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CconfigContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(BTreeDSLParser.NameContext,0)


        def params(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BTreeDSLParser.ParamsContext)
            else:
                return self.getTypedRuleContext(BTreeDSLParser.ParamsContext,i)


        def getRuleIndex(self):
            return BTreeDSLParser.RULE_cconfig

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCconfig" ):
                listener.enterCconfig(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCconfig" ):
                listener.exitCconfig(self)




    def cconfig(self):

        localctx = BTreeDSLParser.CconfigContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_cconfig)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.name()
            self.state = 120
            self.match(BTreeDSLParser.T__3)
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==13 or _la==14:
                self.state = 121
                self.params()
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 127
            self.match(BTreeDSLParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MidContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(BTreeDSLParser.NameContext,0)


        def getRuleIndex(self):
            return BTreeDSLParser.RULE_mid

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMid" ):
                listener.enterMid(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMid" ):
                listener.exitMid(self)




    def mid(self):

        localctx = BTreeDSLParser.MidContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_mid)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.name()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bexpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BTreeDSLParser.BexprContext)
            else:
                return self.getTypedRuleContext(BTreeDSLParser.BexprContext,i)


        def getRuleIndex(self):
            return BTreeDSLParser.RULE_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParams" ):
                listener.enterParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParams" ):
                listener.exitParams(self)




    def params(self):

        localctx = BTreeDSLParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_params)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.bexpr()
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8:
                self.state = 132
                self.match(BTreeDSLParser.T__7)
                self.state = 133
                self.bexpr()
                self.state = 138
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BexprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(BTreeDSLParser.NameContext,0)


        def value(self):
            return self.getTypedRuleContext(BTreeDSLParser.ValueContext,0)


        def BOP(self):
            return self.getToken(BTreeDSLParser.BOP, 0)

        def ATT(self):
            return self.getToken(BTreeDSLParser.ATT, 0)

        def getRuleIndex(self):
            return BTreeDSLParser.RULE_bexpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBexpr" ):
                listener.enterBexpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBexpr" ):
                listener.exitBexpr(self)




    def bexpr(self):

        localctx = BTreeDSLParser.BexprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_bexpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.name()
            self.state = 140
            _la = self._input.LA(1)
            if not(_la==10 or _la==11):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 141
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FLOAT(self):
            return self.getToken(BTreeDSLParser.FLOAT, 0)

        def name(self):
            return self.getTypedRuleContext(BTreeDSLParser.NameContext,0)


        def func(self):
            return self.getTypedRuleContext(BTreeDSLParser.FuncContext,0)


        def tupl(self):
            return self.getTypedRuleContext(BTreeDSLParser.TuplContext,0)


        def getRuleIndex(self):
            return BTreeDSLParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)




    def value(self):

        localctx = BTreeDSLParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_value)
        try:
            self.state = 147
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 143
                self.match(BTreeDSLParser.FLOAT)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 144
                self.name()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 145
                self.func()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 146
                self.tupl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(BTreeDSLParser.NameContext,0)


        def FLOAT(self, i:int=None):
            if i is None:
                return self.getTokens(BTreeDSLParser.FLOAT)
            else:
                return self.getToken(BTreeDSLParser.FLOAT, i)

        def getRuleIndex(self):
            return BTreeDSLParser.RULE_func

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc" ):
                listener.enterFunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc" ):
                listener.exitFunc(self)




    def func(self):

        localctx = BTreeDSLParser.FuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_func)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.name()
            self.state = 150
            self.match(BTreeDSLParser.T__3)
            self.state = 151
            self.match(BTreeDSLParser.FLOAT)
            self.state = 156
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8:
                self.state = 152
                self.match(BTreeDSLParser.T__7)
                self.state = 153
                self.match(BTreeDSLParser.FLOAT)
                self.state = 158
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 159
            self.match(BTreeDSLParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TuplContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FLOAT(self, i:int=None):
            if i is None:
                return self.getTokens(BTreeDSLParser.FLOAT)
            else:
                return self.getToken(BTreeDSLParser.FLOAT, i)

        def getRuleIndex(self):
            return BTreeDSLParser.RULE_tupl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTupl" ):
                listener.enterTupl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTupl" ):
                listener.exitTupl(self)




    def tupl(self):

        localctx = BTreeDSLParser.TuplContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_tupl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.match(BTreeDSLParser.T__3)
            self.state = 162
            self.match(BTreeDSLParser.FLOAT)
            self.state = 167
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8:
                self.state = 163
                self.match(BTreeDSLParser.T__7)
                self.state = 164
                self.match(BTreeDSLParser.FLOAT)
                self.state = 169
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 170
            self.match(BTreeDSLParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORD(self):
            return self.getToken(BTreeDSLParser.WORD, 0)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(BTreeDSLParser.WS)
            else:
                return self.getToken(BTreeDSLParser.WS, i)

        def getRuleIndex(self):
            return BTreeDSLParser.RULE_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterName" ):
                listener.enterName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitName" ):
                listener.exitName(self)




    def name(self):
